--- a/pom.xml
+++ b/pom.xml
@@ -33,6 +33,12 @@
       <groupId>org.springframework.boot</groupId>
       <artifactId>spring-boot-starter-security</artifactId>
     </dependency>
+    <dependency>
+      <groupId>com.google.protobuf</groupId>
+      <artifactId>protobuf-java</artifactId>
+      <version>3.15.0-rc-2</version>
+    </dependency>
+
 
     <dependency>
       <groupId>io.pebbletemplates</groupId>
