--- a/pom.xml
+++ b/pom.xml
@@ -38,7 +38,11 @@
       <artifactId>protobuf-java</artifactId>
       <version>3.15.0-rc-2</version>
     </dependency>
-
+    <dependency>
+      <groupId>javax.websocket</groupId>
+      <artifactId>javax.websocket-api</artifactId>
+      <version>1.1</version>
+    </dependency>
 
     <dependency>
       <groupId>io.pebbletemplates</groupId>
